--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,32 @@
         <item>Sonapur</item>
         <item>Varsity Area</item>
         <item>Dotto Bari</item>
+        <item>Others</item>
+
+    </string-array>
+
+    <string-array name="month_spinner">
+
+        <item>January</item>
+        <item>February</item>
+        <item>March</item>
+        <item>April</item>
+        <item>May</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
+
+    </string-array>
+
+    <string-array name="desireRent_spinner">
+
+        <item>Seat</item>
+        <item>Flat</item>
+        <item>Room</item>
 
     </string-array>
 
