Splash Activity Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
         <item>Sonapur</item>
         <item>Varsity Area</item>
         <item>Dotto Bari</item>
+        <item>Rashid Kaloni</item>
+        <item>Sultan Kaloni</item>
         <item>Others</item>
 
     </string-array>
